# safespace-ai-agent

./: .gitignore  frontend.py  pyproject.toml  requirements.txt
backend/: ai_agent.py  config.py  main.py  tools.py
