[project]
name = "safespace-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.2",
    "geopy>=2.4.1",
    "langchain>=0.3.27",
    "langchain-groq>=0.3.8",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.8",
    "langgraph>=0.6.7",
    "ollama>=0.5.4",
    "pydantic>=2.11.9",
    "requests>=2.32.5",
    "streamlit>=1.49.1",
    "twilio>=9.8.0",
    "uvicorn>=0.35.0",
]
